--- a/graph-initializer/conf/remote-objects.yaml
+++ b/graph-initializer/conf/remote-objects.yaml
@@ -1,4 +1,4 @@
-hosts: [127.0.0.1]
+hosts: [localhost]
 port: 8182
 serializer: {
   className: org.apache.tinkerpop.gremlin.driver.ser.GryoMessageSerializerV3d0,
